--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
     <meta property="og:title" content="Spartapedia" />
     <meta property="og:description" content="Summary of the contents of the page you are viewing" />
-    <meta property="og:image" content="{{ url_for('/static/ogimage.png')}}"/>
+    <meta property="og:image" content="{{ url_for('static', filename='ogimage.png') }}" />
 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
