--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <meta property="og:title" content="Spartapedia" />
-    <meta property="og:description" content="Summary of the contents of the page you are viewing" />
+    <meta name="description" content="Summary of the contents of the page you are viewing" />
     <meta property="og:image" content="{{ url_for('static', filename='ogimage.png') }}" />
 
 
